--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "note-taker",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "fs": "0.0.1-security",
-    "morgan": "^1.10.0",
-    "path": "^0.12.7",
-    "uuid": "^8.3.0"
-  }
+    "name": "note-taker",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "start": "node server.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.17.1",
+        "fs": "0.0.1-security",
+        "morgan": "^1.10.0",
+        "path": "^0.12.7",
+        "uuid": "^8.3.0"
+    }
 }
